# real_time_order_system

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  docker-compose.yml  pyproject.toml
services/inventory_service/app/: main.py
services/notification_service/app/: main.py
services/order_service/app/: main.py
shared/kafka/: consumer.py  producer.py
